# io-webdav

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  flake.nix  shell.nix
.github/workflows/: tests.yml
docs/: README.md  sync-plan.md
examples/: list_calendars.rs
src/: client.rs  coroutine.rs  lib.rs  rfc4918.rs
src/rfc4791/: calendar.rs  calendar_home_set.rs  calendar_home_set.xml  create_calendar.rs  create_calendar.xml  create_item.rs  delete_calendar.rs  delete_item.rs  item.rs  list_calendars.rs  list_items.rs  mod.rs  read_item.rs  update_calendar.rs  update_calendar.xml  update_item.rs
src/rfc4791/calendar/: create.rs  delete.rs  home_set.rs  list.rs  list.xml  mod.rs  types.rs  update.rs  utils.rs
src/rfc4791/item/: create.rs  delete.rs  list.rs  list.xml  mod.rs  read.rs  types.rs  update.rs  utils.rs
src/rfc4918/: auth.rs  copy.rs  coroutine.rs  delete.rs  follow_redirects.rs  get.rs  mkcol.rs  mod.rs  move.rs  move_.rs  options.rs  propfind.rs  proppatch.rs  put.rs  report.rs  request.rs  response.rs  send.rs  types.rs  utils.rs
src/rfc5397/: current_user_principal.rs  current_user_principal.xml  mod.rs
src/rfc6352/: addressbook.rs  addressbook_home_set.rs  addressbook_home_set.xml  card.rs  create_addressbook.rs  create_card.rs  delete_addressbook.rs  delete_card.rs  list_addressbooks.rs  list_addressbooks.xml  list_cards.rs  list_cards.xml  mod.rs  read_card.rs  update_addressbook.rs  update_card.rs
src/rfc6352/addressbook/: create.rs  create.xml  delete.rs  home_set.rs  list.rs  mod.rs  types.rs  update.rs  update.xml  utils.rs
src/rfc6352/card/: create.rs  delete.rs  enumerate.rs  list.rs  mod.rs  multiget.rs  read.rs  types.rs  update.rs  utils.rs
src/rfc6578/: mod.rs  sync_collection.rs
src/rfc6764/: mod.rs  well_known.rs
tests/: client.rs  common.rs  fastmail.rs  google.rs  icloud.rs  radicale.rs  radicale.sh  rfc4791.rs  rfc4918.rs  rfc5397.rs  rfc6352.rs  rfc6578.rs  stalwart.rs  stalwart.sh
tests/common/: mod.rs
