[package]
name = "io-webdav"
description = "WebDAV client library for Rust"
version = "0.0.1"
authors = ["soywod <pimalaya.org@posteo.net>"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "no-std"]
keywords = ["io-free", "no-std", "coroutine", "caldav", "carddav"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-webdav/latest/io_webdav"
repository = "https://github.com/pimalaya/io-webdav"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rustls-ring"]
client = []
rustls-ring = ["client", "pimalaya-stream/rustls-ring", "dep:anyhow", "dep:pimalaya-stream"]
rustls-aws = ["client", "pimalaya-stream/rustls-aws", "dep:anyhow", "dep:pimalaya-stream"]
native-tls = ["client", "pimalaya-stream/native-tls", "dep:anyhow", "dep:pimalaya-stream"]
vendored = ["pimalaya-stream?/vendored"]

[[example]]
name = "list_calendars"
path = "examples/list_calendars.rs"
required-features = ["rustls-ring"]

[dev-dependencies]
env_logger = "0.11"
pimalaya-stream = { version = "0.1", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-platform-verifier = "0.7"
serde_json = "1"
url = { version = "2.5", default-features = false }

[dependencies]
anyhow = { version = "1", optional = true }
io-http = { version = "0.3", default-features = false }
log = { version = "0.4", default-features = false }
pimalaya-stream = { version = "0.1", default-features = false, optional = true }
quick-xml = { version = "0.41", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }
url = { version = "2.5", default-features = false, features = ["serde"] }
